--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     margin:0px;
 }
@@ -9,12 +12,102 @@ body{
     border:1px solid black;
     height:2rem;
 }
-.sheets-container{
-    border:1px solid black;
-    height:1rem;
-}
+
+
 .grid-container{
     border:1px solid black;
-    height:calc( 100vh - (7rem));
+    height:calc( 100vh - (7.5rem));
     background-color: antiquewhite;
+   
+
+}
+.lefttopbox{
+    width:2rem;
+    height:1.5rem;
+    border:0.5px solid black;
+    background-color: tomato;
+}
+.firstcol{
+    width:2rem;
+   
+    height: calc(100vh - (9rem));
+    overflow:auto;
+}
+.firstcol::-webkit-scrollbar { 
+    display: none;
+}
+.firstcoldiv{
+    height:1.5rem;
+    width:2rem;
+    border:1px solid black;
+    text-align: center;
+    background-color: #CEE5D0;
+
+}
+.firstrow{
+    height:1.5rem;
+    background-color: yellow;
+   
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.sheets-container{
+    /* border:1px solid black; */
+    height:1.5rem;
+    display: flex;
+    
+}
+button{
+    border-radius: 60%;
+    background-color:#F7D59C;
+}
+.addbutton{
+    
+    /* border:0.5px solid black; */
+    text-align:center;
+    width:2rem;
+    height:100%;
+}
+#addsheet{
+    width:1.5rem;
+    height:100%;
+}  
+.sheetspace{
+    height:100%;
+    width:calc( 100vw - (1.5rem));
+    padding-left: 0.1rem;
+    display:flex;
+    overflow: auto;
+    
+}
+
+/* for removing the horizontalscroll bar when adding excess sheets */
+.sheetspace::-webkit-scrollbar { 
+    display: none;
+}
+.sheetno{
+    text-align: center;
+    border:1px solid ;
+    min-width:5rem;
+    background-color: silver;
+}
+.active{
+    background-color:#80ED99 ;
 }
