--- a/style.css
+++ b/style.css
@@ -1,24 +1,127 @@
 *{
     box-sizing: border-box;
 }
+
+  
+
 body{
     margin:0px;
 }
 .menu-container{
-    border:1px solid black;
+    /* border:1px solid black; */
     height:4rem;
 }
+#topmenu{
+    height:2rem;
+}
+#bottommenu{
+    height:2rem;
+    display:flex;
+    
+}
+
+#bottommenu > *{
+    border:none;
+    /* border-left:1px solid silver; */
+    border-right:1px solid silver;
+    height:80%;
+    align-items: center;
+    background-color: white;
+    outline:none;
+    padding-right:0.5rem;
+    padding-left:0.5rem
+    
+}
+#fontsize{
+    width:4rem;
+}
+
+#fontsyle {
+    width:8rem;
+}
+#bui
+{
+    /* height:100%; */
+    display: flex;
+    justify-content:space-between;
+    
+   
+    width:8rem;
+}
+#span1{
+    width:30%;
+}
+#span2{
+    width:30%;
+    
+}
+.iconactive{
+    background-color:rgb(178, 178, 248);
+}
+#align{
+    display: flex;
+    justify-content: space-between;
+    width:8rem;
+
+}
+#color{
+    
+   width:10rem;
+}
+
+
+
+
+
+/* **************************************************************************8 */
 .formula-container{
     border:1px solid black;
     height:2rem;
+    display:flex;
+    /* justify-content: space-around; */
 }
 
 
+#selectedcell{
+    align-self: center;
+    margin-left:1rem;
+    width:5rem;
+    height: 70%;
+    border:none;
+    border-right: 1px solid gray;
+    outline:none;
+
+}
+#formulainput{
+    align-self: center;
+    height:70%;
+    /* margin:1rem; */
+    border:none;
+    border-left: 1px solid gray;
+    padding-left:1rem;
+    outline:none;
+
+}
+
+#spanfunction{
+    text-align: center;
+    align-self: center;
+    width:2rem;
+}
+
+
+
+
+
+
+
+/* ********************************************************************************8 */
 .grid-container{
     border:1px solid black;
     height:calc( 100vh - (7.5rem));
-    background-color: antiquewhite;
-   
+    background-color: rgb(238, 238, 248);
+   position:relative;
+   overflow: auto;
 
 }
 .lefttopbox{
@@ -26,28 +129,70 @@ body{
     height:1.5rem;
     border:0.5px solid black;
     background-color: tomato;
+    /* position: fixed; */
 }
 .firstcol{
     width:2rem;
+    /* position:relative;
+    bottom:1.5rem; */
+    /* right:calc(100vw - (2rem)); */
    
     height: calc(100vh - (9rem));
-    overflow:auto;
+    /* position: fixed; */
+    /* overflow:auto; */
+    
 }
-.firstcol::-webkit-scrollbar { 
+/* .firstcol::-webkit-scrollbar { 
     display: none;
-}
+} */
 .firstcoldiv{
     height:1.5rem;
-    width:2rem;
+    width:100%;
     border:1px solid black;
     text-align: center;
     background-color: #CEE5D0;
 
 }
-.firstrow{
+.firstrowdiv{
+    min-width:6rem;
+    border:0.5px solid green;
     height:1.5rem;
+    display: flex;
+    text-align: center;
     background-color: yellow;
-   
+            
+    
+}
+.firstrow{
+    position: absolute;
+    left:2rem;
+    top:0rem;
+    width:calc( 100% - 2rem);
+    height:1.5rem;  
+    display: flex;
+    /* position:sticky; */
+    /* overflow: auto; */
+}
+.grid{
+    position:absolute;
+    left:2rem;
+    top:1.5rem;
+    width:calc( 100% - 2rem);
+    height:calc( 100% - 1.5rem);
+    /* overflow:auto; */
+    
+}
+.cells{
+    min-width:6rem;
+    border:0.5px solid green;
+    height:1.5rem;
+    display: flex;
+    text-align: center;  
+
+}
+.rows{
+    display:flex;
+
 }
 
 
@@ -64,7 +209,7 @@ body{
 
 
 
-
+/* ************************************************** */
 
 
 
