--- a/style.css
+++ b/style.css
@@ -25,6 +25,9 @@ hr{
 
 
 #bottommenu{
+    /* overflow-y:hidden; */
+    /* overflow-x:auto ; */
+    width:100%;
     height:2rem;
     display:flex;
     
@@ -43,15 +46,18 @@ hr{
     
 }
 #fontsize{
+    cursor: pointer;
     width:4rem;
 }
 
 #fontsyle {
+    cursor: pointer;
     width:8rem;
 }
 #bui
 {
     /* height:100%; */
+    cursor: pointer;
     display: flex;
     justify-content:space-between;
     
@@ -59,9 +65,11 @@ hr{
     width:8rem;
 }
 #span1{
+    cursor: pointer;
     width:30%;
 }
 #span2{
+    cursor: pointer;
     width:30%;
     
 }
@@ -70,12 +78,14 @@ hr{
     background-color:#CEE5D0;
 }
 #align{
+    cursor: pointer;
     display: flex;
     justify-content: space-between;
     width:8rem;
 
 }
 #textcolor{
+    cursor: pointer;
     /* display: flex; */
     margin-left: 1rem;
     position: relative;
@@ -83,6 +93,7 @@ hr{
     /* justify-content: space-around; */
 }
 #backgroundcolor{
+    cursor: pointer;
     position:relative;
     margin-left:1rem;
     width:4rem;
@@ -90,6 +101,7 @@ hr{
 
 
 .hovertextcolor{
+    cursor: pointer;
     width: 50px;
     /* overflow: visible; */
     visibility: hidden;
@@ -149,7 +161,7 @@ hr{
 
 /* **************************************************************************8 */
 .formula-container{
-    border:1px solid black;
+    border:1px solid silver;
     height:2rem;
     display:flex;
     /* justify-content: space-around; */
@@ -191,7 +203,7 @@ hr{
 
 /* ********************************************************************************8 */
 .grid-container{
-    border:1px solid black;
+    border:0.5px solid rgb(126, 124, 124);
     height:calc( 100vh - (7.5rem));
     background-color: rgb(238, 238, 248);
    position:relative;
@@ -201,7 +213,7 @@ hr{
 .lefttopbox{
     width:2rem;
     height:1.5rem;
-    border:0.5px solid black;
+    border:0.5px solid rgb(121, 118, 118);
     background-color: #CEE5D0;
     /* position: fixed; */
 }
@@ -222,14 +234,14 @@ hr{
 .firstcoldiv{
     height:1.5rem;
     width:100%;
-    border:1px solid black;
+    border:1px solid rgb(136, 133, 133);
     text-align: center;
     background-color: #CEE5D0;
 
 }
 .firstrowdiv{
     min-width:6rem;
-    border:0.5px solid green;
+    border:0.5px solid silver;
     height:1.5rem;
     display: flex;
     text-align: center;
@@ -292,24 +304,39 @@ hr{
     display: flex;
     
 }
-button{
-    border-radius: 60%;
-    background-color:#9ed6a2;
-}
+
 .addbutton{
     
     /* border:0.5px solid black; */
+    position: absolute;
+    z-index: 2;
+    height:1.5rem;
     text-align:center;
-    width:2rem;
-    height:100%;
+    /* width:2.5rem; */
 }
 #addsheet{
-    width:1.5rem;
-    height:100%;
+    position: relative;
+    bottom:1rem;
+    background-color: #4CAF50;
+    border-radius: 60%;
+    /* background-color:#9ed6a2; */
+    cursor: pointer;
+    /* box-shadow: 0 2px #999; */
+    width:2.5rem;
+    height:2.5rem;
 }  
+#addsheet:hover {background-color: #3e8e41}
+
+#addsheet:active {
+  background-color: #3e8e41;
+  /* box-shadow: 0 5px #666; */
+  transform: translateY(-4px);
+}
 .sheetspace{
     height:100%;
-    width:calc( 100vw - (1.5rem));
+    position: relative;
+    left:2.5rem;
+    width:calc( 100vw - (2.5rem));
     padding-left: 0.1rem;
     display:flex;
     overflow: auto;
@@ -321,6 +348,7 @@ button{
     display: none;
 }
 .sheetno{
+    cursor: pointer;    
     text-align: center;
     border:1px solid ;
     min-width:5rem;
